test/bad/classes/constructor05.px

class Test def
    constructor(Int x) def
        skip
